# validor

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  abc_test.md  alembic.ini  api_contract_template.md  compose.yaml  main.py  pyproject.toml  pytest.ini  tmp_repro_ingestion_commit.py
.github/workflows/: tests.yaml
.specstory/history/: 2026-01-12_20-25Z-api-contract-for-csv-ingestion-definition.md  2026-01-13_23-01Z-reviewing-pydantic-model-for-csv-ingestion-request.md  2026-01-15_18-41Z-csv-file-monitoring-and-processing-implementation.md  2026-01-20_18-13Z-testing-200-response-for-duplicate-csv-ingestion.md  2026-01-23_20-35Z-reviewing-rawdata-sqlalchemy-model-for-correctness.md  2026-01-23_20-51Z-reviewing-sqlalchemy-rawdata-model-for-correctness.md  2026-01-27_22-10Z-testing-strategy-for-healthtech-backend-project.md  (+9 more)
alembic/: env.py
api_contracts/: raw_csv_api_conract.md  raw_csv_api_contract.md  read_api_contract.md
app/: csv_uploader.py  db.py  main.py
csv_uploader/: DEMO_README.md  __init__.py  cli_demo.py  cli_rich.py  config.yaml  csv_generator.py  csv_generator_description.md  csv_generator_rules.md  csv_uploader.py  daily_run_counter.json  demo.py  generation_profiles.yaml
demo/: cli_demo.py  web_demo.py
dev_only/: INTERNAL_README.md
metrics/: README.md  benchmark_results.csv  oneoff_fix_tz_and_compute_set_of_50_initial_makespans.py
scripts/: render_start_api.sh  render_start_web_demo.sh
seed/: template_test.yaml  template_test_panel.yaml
src/: csv_uploader.py
supporting_docs/: database_design.md
tests/: conftest.py
(+384 files in other folders)
